update license in compose.json

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,6 @@
         }
     },
     "minimum-stability": "dev",
-    "license": "proprietary",
+    "license": "MIT",
     "prefer-stable": true
 }
